--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div id="post">
             <h1>este es el titulo</h1>
-            <p>este es el parrafo de inicio donde vamoas a explicar las cosas increibles que se pude hacer con este rama</p>
+            <p>este es el parrafo de inicio donde vamoas a explicar las cosas increibles que se pude hacer con este rama con una tecnologia</p>
         </div>
     </div> 
  </body>
