--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="container">
         <div id="post">
-            <h1>este es el titulo</h1>
-            <p>este es el parrafo de inicio donde vamoas a explicar las cosas increibles que se pude hacer con este rama con una tecnologia</p>
+            <h1>Este es el titulo</h1>
+            <p>Este es el parrafo de inicio donde vamoas a explicar las cosas increibles que se pude hacer con este rama con una tecnologia</p>
         </div>
     </div> 
  </body>
