--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="cabecera">
+            cabecera
+        </div>
         <div id="post">
             <h1>Este es el titulo</h1>
             <p>Este es el parrafo de inicio donde vamoas a explicar las cosas increibles que se pude hacer con este rama con una tecnologia</p>
