cabecera finalizada color azul

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="cabecera">
-            cabecera
+            Blog de prueba
         </div>
         <div id="post">
             <h1>Este es el titulo</h1>
