--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <div id="post">
             <h1>Este es el titulo</h1>
             <p>Este es el parrafo de inicio donde vamoas a explicar las cosas increibles que se pude hacer con este rama con una tecnologia</p>
-        </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus maiores tempora perspiciatis, ex hic, soluta ut omnis illum sint dolorem, consectetur fuga nobis. Possimus et non molestiae sapiente ipsam corporis!
+            Vel sequi molestiae, explicabo in eum, harum fugiat nisi qui rerum dicta nulla cumque non repellat, quisquam doloremque illum quos totam cupiditate. Et architecto quisquam quidem fugiat consequuntur iusto a.
+            Quam voluptatibus voluptatem vitae, libero rem possimus commodi. Consectetur accusamus tenetur, beatae nulla cum et maxime quis veniam soluta libero iure. Rerum velit qui minus sunt inventore. Omnis, magni hic?</p>
+          
     </div> 
  </body>
 </html>
